# SQL-DB-Creator

./: .gitignore  README.md
sql_db_creator/: Cargo.toml  README.md
sql_db_creator/src/: database.rs  main.rs  util.rs
sql_db_creator/src/db/: db.rs  dbs.rs
sql_db_creator/src/sql/: mysql.rs  postgres_sql.rs
sql_db_creator/src/sql_db_creator/: creator.rs
sql_db_creator_example/: Cargo.toml
