[package]
name = "sql_db_creator"
version = "0.1.5"
edition = "2021"
authors = ["Sokrates Bousios"]
description = "Generate sql databases by only configure the data of the databases in json files. \n #sql #mysql #postgressql #database"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6", git = "https://github.com/demurgos/sqlx.git", branch = "issue-1477", features = [ "postgres", "mysql", "migrate", "macros", "chrono", "runtime-async-std-rustls" ] }
actix-web = "4"
futures = "0.3"
serde_json = "1.0.91"
